<resources>
    <string name="app_name">Smart Relationship</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_scan_frequency">Sample scan frequency (seconds)</string>
    <string name="voice_record_duration">Voice record duration (seconds)</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="preferences">Preferences</string>
    <string name="error_scan_frequency">Scan frequency must be greater than 30</string>
    <string name="error_record_duration">Record duration must be greater than 0</string>
    <string name="error_scan_freq_lower_record_duration">Scan frequency must be greater than record duration</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="enable_voice_recording">Enable voice recording?</string>
    <string name="zip_and_send_logs">Zip and send logs</string>
    <string name="logs_sent">Logs sent. Zip file deleted.</string>

    <string name="in_vehicle">in_vehicle</string>
    <string name="on_bicycle">on_bicycle</string>
    <string name="on_foot">on_foot</string>
    <string name="running">running</string>
    <string name="still">still</string>
    <string name="tilting">tilting</string>
    <string name="unknown">unknown</string>
    <string name="walking">walking</string>

    <string name="audio_video">audio_video</string>
    <string name="computer">computer</string>
    <string name="health">health</string>
    <string name="imaging">imaging</string>
    <string name="misc">misc</string>
    <string name="networking">networking</string>
    <string name="peripheral">peripheral</string>
    <string name="phone">phone</string>
    <string name="toy">toy</string>
    <string name="uncategorized">uncategorized</string>
    <string name="wearable">wearable</string>
    <string name="notification_title">BT discoverable disabled</string>
    <string name="notification_description">Your device is not discoverable by others. Please, enable it.</string>
    <string name="status">Status</string>
    <string name="activity">Activity</string>
    <string name="audio">Audio</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="orientation">Orientation</string>
    <string name="wifi">Wifi</string>
    <string name="not_found">Not found</string>
    <string name="refresh">Refresh status</string>

</resources>
