<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_actionbar"/>

    <include layout="@layout/progress_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/start_listening_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/narrow_space"
                        android:text="@string/start" />

                    <Button
                        android:id="@+id/stop_listening_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/narrow_space"
                        android:text="@string/stop" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/wide_space"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/preferences"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/enable_voice_recording"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:checked="true"
                    android:enabled="false"
                    android:visibility="gone"
                    android:text="@string/enable_voice_recording"/>

                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/sample_scan_frequency_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sample_scan_frequency_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sample_scan_frequency"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/voice_record_duration_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/voice_record_duration_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/voice_record_duration"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/save_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mid_space"
                    android:text="@string/save"
                    android:textStyle="bold" />-->

                <Button
                    android:id="@+id/zip_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mid_space"
                    android:text="@string/zip_and_send_logs"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    style="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mid_space"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/status"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/narrow_space">

                        <View
                            android:id="@+id/activity_status"
                            android:layout_width="@dimen/status_width"
                            android:layout_height="@dimen/status_height"
                            android:background="@color/status_error" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/mid_space"
                            android:layout_marginStart="@dimen/mid_space"
                            android:layout_toRightOf="@id/activity_status"
                            android:text="@string/activity"/>

                        <TextView
                            android:id="@+id/activity_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/activity_status"
                            android:layout_marginTop="@dimen/narrow_space"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/not_found"/>


                    </RelativeLayout>

                    <include layout="@layout/list_divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/narrow_space">

                        <View
                            android:id="@+id/audio_status"
                            android:layout_width="@dimen/status_width"
                            android:layout_height="@dimen/status_height"
                            android:background="@color/status_error"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/mid_space"
                            android:layout_marginStart="@dimen/mid_space"
                            android:layout_toRightOf="@id/audio_status"
                            android:text="@string/audio"/>

                        <TextView
                            android:id="@+id/audio_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/audio_status"
                            android:layout_marginTop="@dimen/narrow_space"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/not_found"/>

                    </RelativeLayout>

                    <include layout="@layout/list_divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/narrow_space">

                        <View
                            android:id="@+id/bluetooth_status"
                            android:layout_width="@dimen/status_width"
                            android:layout_height="@dimen/status_height"
                            android:background="@color/status_error"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/mid_space"
                            android:layout_marginStart="@dimen/mid_space"
                            android:layout_toRightOf="@id/bluetooth_status"
                            android:text="@string/bluetooth"/>

                        <TextView
                            android:id="@+id/bluetooth_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bluetooth_status"
                            android:layout_marginTop="@dimen/narrow_space"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/not_found"/>


                    </RelativeLayout>

                    <include layout="@layout/list_divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/narrow_space">

                        <View
                            android:id="@+id/orientation_status"
                            android:layout_width="@dimen/status_width"
                            android:layout_height="@dimen/status_height"
                            android:background="@color/status_error"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/orientation"
                            android:layout_marginLeft="@dimen/mid_space"
                            android:layout_marginStart="@dimen/mid_space"
                            android:layout_toRightOf="@id/orientation_status"/>

                        <TextView
                            android:id="@+id/orientation_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/orientation_status"
                            android:layout_marginTop="@dimen/narrow_space"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/not_found"/>


                    </RelativeLayout>

                    <include layout="@layout/list_divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/narrow_space">

                        <View
                            android:id="@+id/wifi_status"
                            android:layout_width="@dimen/status_width"
                            android:layout_height="@dimen/status_height"
                            android:background="@color/status_error"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/mid_space"
                            android:layout_marginStart="@dimen/mid_space"
                            android:layout_toRightOf="@id/wifi_status"
                            android:text="@string/wifi"/>

                        <TextView
                            android:id="@+id/wifi_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/wifi_status"
                            android:layout_marginTop="@dimen/narrow_space"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/not_found"/>

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
